# Qwen-Agent

./: pyproject.toml
plugins/: test_openai_func_call.py  test_vllm_func_call.py  verify_qwen35_openai_tool_call.py
scripts/: build_env.sh  create_vllm  create_vllm.sh  verify_qwen35_tool_call.py
